Config for production install

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -7,7 +7,7 @@ upstream emt_proxy_server {
 
 # http server for proxy balancing                                                                                                                    
 server {
-  server_name  emergingtime.mit.edu;
+  server_name  emergent-time.mit.edu;
   listen       80;
 
   rewrite_log on;
